--- a/html/servicios.html
+++ b/html/servicios.html
@@ -9,8 +9,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <!-- CSS -->
         <link rel="stylesheet" href="../css/estilos.css">
-        <!-- SASS -->
-        <link rel="stylesheet" href="../sass/estilos.scss">
         <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,7 +60,7 @@
             </div>
         </div>  
     </header>
-    <main>
+    <main class="main">
         <div class="grid">
             <div class="tituloss">
                 <h1><span class="color-acento-1">CONOCE NUESTROS SERVICIOS </span></h1>
